--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
 
     "apps-build:frontend": "cd apps/frontend && npm run build",
     "apps-build:backend": "cd apps/backend && npm run build",
-    "packages-build:core": "cd packages/core && npm run dev",
+    "packages-build:core": "cd packages/core && npm run build",
         
     "apps-start:frontend": "cd apps/frontend && npm run start",
     "apps-start:backend": "cd apps/backend && npm run start"
